# EZKatana

./: APP_OVERVIEW.md  README.md  __init__.py  __main__.py  easyrun.py  pyproject.toml
runners/: DockerRunner.py  LocalRunner.py  Runner.py  container_executor.py
src/ezsmolagents/: __init__.py  __main__.py  easyrun.py
src/ezsmolagents/runners/: DockerRunner.py  LocalRunner.py
