[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ezsmolagents"
version = "1.0.0"
description = "EZ Smolagents makes smolagents easy."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "flask>=3.1.3",
    "rich>=15.0.0",
    "ruff>=0.15.12",
    "setuptools>=82.0.1",
    "smolagents[litellm]>=1.24.0",
    "twine>=6.2.0",
]
